fixed post img placement on smaller screens

--- a/css/hannah_blog.css
+++ b/css/hannah_blog.css
@@ -516,6 +516,11 @@ a:hover figcaption { color: #be18ff; }
 
 @media (max-width: 709px) {
     .tm-person-col { width: 100%; }
+    .tm-mb-40{ width: 30em;
+        height: 18em;
+    align-items: center;
+    padding-left:2%;}
+    
 }
 
 @media (max-width: 991px) and (min-width: 826px) {
@@ -547,6 +552,10 @@ a:hover figcaption { color: #be18ff; }
 @media (max-width: 480px) {
     .tm-person-col { width: 100%; }
     .tm-person { flex-direction: row; }
+    .tm-mb-40{ width: 21em;
+    height: 10em;
+align-items: center;
+padding-left:2%;}
 }
 
 @media (max-width: 380px) {
